Fix bug where long project names cause scrollbar in add modal

--- a/src/styles/order-service.less
+++ b/src/styles/order-service.less
@@ -180,6 +180,9 @@
   }
   .review-message {
     padding-left: 10px;
+    strong {
+      .word-break();
+    }
   }
   .review-status {
     display: flex;
